--- a/workspace/properties/project-variables.mdx
+++ b/workspace/properties/project-variables.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Properties → Global Variables"
+title: "Properties → Project Variables"
 description: "Define and reference Project‑scoped configuration"
 ---
 
