--- a/changelog/index.mdx
+++ b/changelog/index.mdx
@@ -12,7 +12,7 @@ This period represents a major transformation of the Triform platform with:
 - **1,292+ files changed** across the platform
 - **~50,000 net lines of code added**
 - **25+ database migrations**
-- **3 contributors**: zulvskog, Hannes Fant, Patrik Engborg
+- **3 contributors**: zulvskog, Hannes Fant, Iggy Gullstrand
 
 ### 🎯 Major Achievements
 
@@ -48,7 +48,7 @@ This period represents a major transformation of the Triform platform with:
 
 ## October 2025
 
-### v2.10.0 — October 20-21, 2025
+### v0.10.0 — October 20-21, 2025
 
 **New Features:**
 - 🔧 **Build a Tool** — New functionality to create custom tools directly from the interface
@@ -83,7 +83,7 @@ This period represents a major transformation of the Triform platform with:
 - Renamed projects to toolboxes throughout codebase
 - Improved navigation to root when reverting changes
 
-### v2.9.5 — October 13-17, 2025
+### v0.9.5 — October 13-17, 2025
 
 **New Features:**
 - 🛠️ **Chat with Tools** — Comprehensive chat implementation with tool integration
@@ -107,7 +107,7 @@ This period represents a major transformation of the Triform platform with:
 **Dependencies:**
 - Bumped package dependencies across the stack
 
-### v2.9.0 — October 10-12, 2025
+### v0.9.0 — October 10-12, 2025
 
 **New Features:**
 - 💬 **Chat Panel Documentation** — Comprehensive documentation for chat interface, chat history, and project selector
@@ -135,7 +135,7 @@ This period represents a major transformation of the Triform platform with:
 **Dependencies:**
 - Updated ESLint configuration
 
-### v2.8.5 — October 8-9, 2025
+### v0.8.5 — October 8-9, 2025
 
 **New Features:**
 - 📄 **LLM.txt Support** — Added `llms.txt` and `llms.mdx` for AI-friendly documentation access
@@ -171,7 +171,7 @@ This period represents a major transformation of the Triform platform with:
 - Fixed license formatting in community terms
 - Corrected navigation structure in documentation
 
-### v2.8.0 — October 3-6, 2025
+### v0.8.0 — October 3-6, 2025
 
 **New Features:**
 - 🔧 **Project Variables** — Environment variables renamed to project variables for clarity
@@ -209,7 +209,7 @@ This period represents a major transformation of the Triform platform with:
 **Removed:**
 - Dropped Twipla analytics
 
-### v2.7.8 — October 1-2, 2025
+### v0.7.8 — October 1-2, 2025
 
 **Major Documentation Restructure:**
 - 🧹 **Massive Cleanup** — Removed over 7,300 lines of redundant or outdated documentation
@@ -236,7 +236,7 @@ This period represents a major transformation of the Triform platform with:
 - Consolidated variables documentation
 - Renamed requirements.mdx to dependencies.mdx for clarity
 
-### v2.7.6 — September 30, 2025
+### v0.7.6 — September 30, 2025
 
 **Documentation Organization:**
 - 📋 **Major Restructure** — Reorganized documentation hierarchy
@@ -263,7 +263,7 @@ This period represents a major transformation of the Triform platform with:
 - Corrected documentation links after restructure
 - Updated docs.json configuration
 
-### v2.7.5 — September 26, 2025
+### v0.7.5 — September 26, 2025
 
 **Initial Setup:**
 - 🎉 **Documentation Repository Initialized** — Created comprehensive documentation structure
@@ -282,7 +282,7 @@ This period represents a major transformation of the Triform platform with:
 
 ## September 2025
 
-### v2.7.5 — September 29-30, 2025
+### v0.7.4 — September 29-30, 2025
 
 **New Features:**
 - ⚡ **Execution Cancellation** — Complete cancellation logic with proper cleanup
@@ -321,7 +321,7 @@ This period represents a major transformation of the Triform platform with:
 - Let agent handle tool errors properly
 - Migrated inputs schema
 
-### v2.7.0 — September 25-26, 2025
+### v0.7.0 — September 25-26, 2025
 
 **New Features:**
 - 🔄 **Auto-Retry Logic** — Automatic retries with exponential backoff for Actions
@@ -344,7 +344,7 @@ This period represents a major transformation of the Triform platform with:
 - Fixed: Project Variables not substituting in nested objects
 - Multiple small bug fixes
 
-### v2.6.8 — September 22-24, 2025
+### v0.6.8 — September 22-24, 2025
 
 **New Features:**
 - 🔁 **Loop Implementation** — Initial loop support for iterative flows
@@ -359,7 +359,7 @@ This period represents a major transformation of the Triform platform with:
 - Enhanced loop functionality
 - Better agent configuration interface
 
-### v2.6.7 — September 17-19, 2025
+### v0.6.7 — September 17-19, 2025
 
 **New Features:**
 - 📝 **Default Project README** — Auto-generated README for new projects
@@ -396,7 +396,7 @@ This period represents a major transformation of the Triform platform with:
 **Dependencies:**
 - Bumped package dependencies
 
-### v2.6.6 — September 11-15, 2025
+### v0.6.6 — September 11-15, 2025
 
 **New Features:**
 - 🔨 **Actions Without Requirements** — Build actions without specifying requirements first
@@ -429,7 +429,7 @@ This period represents a major transformation of the Triform platform with:
 - Remove old edges on action I/O rename
 - Fixed execution of top-level flows
 
-### v2.6.5 — September 8-10, 2025
+### v0.6.5 — September 8-10, 2025
 
 **New Features:**
 - ⚡ **Quick Actions** — Keyboard shortcuts for common operations
@@ -472,7 +472,7 @@ This period represents a major transformation of the Triform platform with:
 **Removed:**
 - Dropped default board
 
-### v2.6.0 — September 2-5, 2025
+### v0.6.0 — September 2-5, 2025
 
 **New Features:**
 - 🎨 **Agent Prompt Redesign** — Initial redesign of agent prompt interface
@@ -519,7 +519,7 @@ This period represents a major transformation of the Triform platform with:
 
 ## August 2025
 
-### v2.5.5 — August 26 - September 1, 2025
+### v0.5.5 — August 26 - September 1, 2025
 
 **New Features:**
 - 🔨 **Build Action Button** — Added to panel header for components (Patrik)
@@ -581,7 +581,7 @@ This period represents a major transformation of the Triform platform with:
 **Removed:**
 - Temporarily removed component library (Patrik)
 
-### v2.5.0 — August 22-25, 2025
+### v0.5.0 — August 22-25, 2025
 
 **New Features:**
 - 💬 **Node Mentions in Chat** — Reference nodes directly in chat (Patrik)
@@ -634,7 +634,7 @@ This period represents a major transformation of the Triform platform with:
 - Code refactoring and added sanitizeMessage (Patrik)
 - Biome integration for code formatting
 
-### v2.4.0 — August 18-21, 2025
+### v0.4.0 — August 18-21, 2025
 
 **Major Release: Infrastructure & Performance**
 
@@ -692,7 +692,7 @@ This period represents a major transformation of the Triform platform with:
 
 ## July 2025
 
-### v2.5.2 — July 28, 2025
+### v0.1.0 — July 28, 2025
 
 **New Features:**
 - 🏷️ **Project Tags** — Organize and filter Projects with custom tags
@@ -713,7 +713,7 @@ This period represents a major transformation of the Triform platform with:
 
 ## June 2025
 
-### v2.5.0 — June 15, 2025
+### v0.2.0 — June 15, 2025
 
 **New Features:**
 - 🎯 **Conditional Routing** — Router nodes for Flow branching logic
@@ -735,7 +735,7 @@ This period represents a major transformation of the Triform platform with:
 
 ## May 2025
 
-### v2.4.0 — May 10, 2025
+### v0.3.0 — May 10, 2025
 
 **New Features:**
 - 🎨 **Custom Branding** — White-label option for Enterprise
